# shounic-best-clips-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
src/: main.rs  sql.rs  state.rs
src/routes/: README.md  admin_data.rs  login.rs  metadata.rs  mod.rs  server_config.rs  server_tables.rs  vote.rs
www/: dashboard.html  index.html  style.css
www/css/: admin.css  base.css  dashboard.css  voting.css
www/js/: boiler.js  dashboard.js  fetch.js  voting.js
www/scss/: base.scss  dashboard.css  dashboard.scss  voting.css  voting.scss
