[package]
name = "shoclips"
version = "0.1.0"
edition = "2021"

[dependencies]
rouille = { version = "3.6.2" }
postgres = { version = "0.19", default-features = false }
serde = "1.0.219"
serde_derive = "1.0.219"
rusqlite = { version = "0.36.0", features = ["bundled"] }
#rusqlite = { version = "0.33" }
argon2 = "0.5.3"
jwt-simple = "0.12.12"
reqwest = { version = "0.11", features = ["blocking"] }